refactor: Enhance code with sonarqube